# kde-purpose-example-plugin

./: CMakeLists.txt  README.md  mydayyyimageupload.cpp  mydayyyimageupload.json
